--- a/style.css
+++ b/style.css
@@ -1889,7 +1889,7 @@ body {
 }
 
 .unknown {
-  color: #cccccc;
+  color: #c01111;
 }
 
 .r1 {
@@ -2099,22 +2099,22 @@ body {
 
 #Alcalinos:checked ~ .periodic-table .element:not(.alkali-metal),
 #Alcalino-Térreos:checked ~ .periodic-table .element:not(.alkaline-earth-metal),
-#lanthanoids:checked ~ .periodic-table .element:not(.lanthanoid),
-#actinoids:checked ~ .periodic-table .element:not(.actinoid),
+#Lantánidos:checked ~ .periodic-table .element:not(.lanthanoid),
+#Actínidos:checked ~ .periodic-table .element:not(.actinoid),
 #transition-metals:checked ~ .periodic-table .element:not(.transition-metal),
 #post-transition-metals:checked ~ .periodic-table .element:not(.post-transition-metal),
 #metalloids:checked ~ .periodic-table .element:not(.metalloid),
-#other-nonmetals:checked ~ .periodic-table .element:not(.other-nonmetal),
+#Otros-Metales:checked ~ .periodic-table .element:not(.other-nonmetal),
 #noble-gasses:checked ~ .periodic-table .element:not(.noble-gas),
 #unknown:checked ~ .periodic-table .element:not(.unknown),
 #Alcalinos:checked ~ .periodic-table .placeholder,
 #Alcalino-Térreos:checked ~ .periodic-table .placeholder,
-#lanthanoids:checked ~ .periodic-table .placeholder:not(.lanthanoid),
-#actinoids:checked ~ .periodic-table .placeholder:not(.actinoid),
+#Lantánidos:checked ~ .periodic-table .placeholder:not(.lanthanoid),
+#Actínidos:checked ~ .periodic-table .placeholder:not(.actinoid),
 #transition-metals:checked ~ .periodic-table .placeholder,
 #post-transition-metals:checked ~ .periodic-table .placeholder,
 #metalloids:checked ~ .periodic-table .placeholder,
-#other-nonmetals:checked ~ .periodic-table .placeholder,
+#Otros-Metales:checked ~ .periodic-table .placeholder,
 #noble-gasses:checked ~ .periodic-table .placeholder,
 #unknown:checked ~ .periodic-table .placeholder {
   opacity: 0.15;
@@ -2123,18 +2123,18 @@ body {
 
 #Alcalinos:checked ~ .periodic-table .key label:not(.alkali-metal),
 #Alcalino-Térreos:checked ~ .periodic-table .key label:not(.alkaline-earth-metal),
-#lanthanoids:checked ~ .periodic-table .key label:not(.lanthanoid),
-#actinoids:checked ~ .periodic-table .key label:not(.actinoid),
+#Lantánidos:checked ~ .periodic-table .key label:not(.lanthanoid),
+#Actínidos:checked ~ .periodic-table .key label:not(.actinoid),
 #transition-metals:checked ~ .periodic-table .key label:not(.transition-metal),
 #post-transition-metals:checked ~ .periodic-table .key label:not(.post-transition-metal),
 #metalloids:checked ~ .periodic-table .key label:not(.metalloid),
-#other-nonmetals:checked ~ .periodic-table .key label:not(.other-nonmetal),
+#Otros-Metales:checked ~ .periodic-table .key label:not(.other-nonmetal),
 #noble-gasses:checked ~ .periodic-table .key label:not(.noble-gas),
 #unknown:checked ~ .periodic-table .key label:not(.unknown) {
   opacity: 0.65;
 }
 
-.cambiar-categoria:not(#lanthanoids):not(#actinoids):checked ~ .periodic-table .gap {
+.cambiar-categoria:not(#Lantánidos):not(#Actínidos):checked ~ .periodic-table .gap {
   opacity: 0.5;
 }
 
