--- a/src/style.sass
+++ b/src/style.sass
@@ -10,7 +10,7 @@ $postTransitionMetalColor: #4cddf3
 $metalloidColor: #3aefb6
 $otherNonmetalColor: #52ee61
 $nobleGasColor: #759fff
-$unknownColor: #cccccc
+$unknownColor: #c01111
 
 body
   background: $bgColor
