--- a/style.css
+++ b/style.css
@@ -1888,7 +1888,7 @@ body {
   color: #759fff;
 }
 
-.unknown {
+.Halógeno {
   color: #c01111;
 }
 
@@ -2106,7 +2106,7 @@ body {
 #Metaloides:checked ~ .periodic-table .elemento:not(.metalloid),
 #Otros-Metales:checked ~ .periodic-table .elemento:not(.other-nonmetal),
 #Gases-nobles:checked ~ .periodic-table .elemento:not(.Gas-Noble),
-#Halógenos:checked ~ .periodic-table .elemento:not(.unknown),
+#Halógenos:checked ~ .periodic-table .elemento:not(.Halógeno),
 #Alcalinos:checked ~ .periodic-table .placeholder,
 #Alcalino-Térreos:checked ~ .periodic-table .placeholder,
 #Lantánidos:checked ~ .periodic-table .placeholder:not(.lanthanoid),
@@ -2130,7 +2130,7 @@ body {
 #Metaloides:checked ~ .periodic-table .key label:not(.metalloid),
 #Otros-Metales:checked ~ .periodic-table .key label:not(.other-nonmetal),
 #Gases-nobles:checked ~ .periodic-table .key label:not(.Gas-Noble),
-#Halógenos:checked ~ .periodic-table .key label:not(.unknown) {
+#Halógenos:checked ~ .periodic-table .key label:not(.Halógeno) {
   opacity: 0.65;
 }
 
