--- a/src/style.sass
+++ b/src/style.sass
@@ -297,7 +297,7 @@ body
 .other-nonmetal
   color: $otherNonmetalColor
 
-.Gas-Noble
+.GasNoble
   color: $GasNobleColor
 
 .Halógeno
@@ -412,7 +412,7 @@ body
 #Otros-Metales:checked ~ .periodic-table .elemento:not(.post-transition-metal),
 #Metaloides:checked ~ .periodic-table .elemento:not(.metalloid),
 #Otros-Metales:checked ~ .periodic-table .elemento:not(.other-nonmetal),
-#Gases-nobles:checked ~ .periodic-table .elemento:not(.Gas-Noble),
+#Gases-nobles:checked ~ .periodic-table .elemento:not(.GasNoble),
 #Halógenos:checked ~ .periodic-table .elemento:not(.Halógeno),
 #Alcalinos:checked ~ .periodic-table .placeholder,
 #Alcalino-Térreos:checked ~ .periodic-table .placeholder,
@@ -436,7 +436,7 @@ body
 #Otros-Metales:checked ~ .periodic-table .key label:not(.post-transition-metal),
 #Metaloides:checked ~ .periodic-table .key label:not(.metalloid),
 #Otros-Metales:checked ~ .periodic-table .key label:not(.other-nonmetal),
-#Gases-nobles:checked ~ .periodic-table .key label:not(.Gas-Noble),
+#Gases-nobles:checked ~ .periodic-table .key label:not(.GasNoble),
 #Halógenos:checked ~ .periodic-table .key label:not(.Halógeno) {
   opacity: 0.65;
 }
