--- a/style.css
+++ b/style.css
@@ -1876,7 +1876,7 @@ body {
   color: #4cddf3;
 }
 
-.metalloid {
+.Metaloide {
   color: #3aefb6;
 }
 
@@ -1884,7 +1884,7 @@ body {
   color: #52ee61;
 }
 
-.Gas-Noble {
+.GasNoble {
   color: #759fff;
 }
 
@@ -2103,9 +2103,9 @@ body {
 #Actínidos:checked ~ .periodic-table .elemento:not(.actinoid),
 #Metales-de-Transición:checked ~ .periodic-table .elemento:not(.transition-metal),
 #Otros-Metales:checked ~ .periodic-table .elemento:not(.post-transition-metal),
-#Metaloides:checked ~ .periodic-table .elemento:not(.metalloid),
+#Metaloides:checked ~ .periodic-table .elemento:not(.Metaloide),
 #Otros-Metales:checked ~ .periodic-table .elemento:not(.other-nonmetal),
-#Gases-nobles:checked ~ .periodic-table .elemento:not(.Gas-Noble),
+#Gases-nobles:checked ~ .periodic-table .elemento:not(.GasNoble),
 #Halógenos:checked ~ .periodic-table .elemento:not(.Halógeno),
 #Alcalinos:checked ~ .periodic-table .placeholder,
 #Alcalino-Térreos:checked ~ .periodic-table .placeholder,
@@ -2115,7 +2115,7 @@ body {
 #Otros-Metales:checked ~ .periodic-table .placeholder,
 #Metaloides:checked ~ .periodic-table .placeholder,
 #Otros-Metales:checked ~ .periodic-table .placeholder,
-#Gases-nobles:checked ~ .periodic-table .placeholder,
+#Gases-nobles:checked ~ .periodic-table .placeholder,   
 #Halógenos:checked ~ .periodic-table .placeholder {
   opacity: 0.15;
   pointer-events: none;
@@ -2127,9 +2127,9 @@ body {
 #Actínidos:checked ~ .periodic-table .key label:not(.actinoid),
 #Metales-de-Transición:checked ~ .periodic-table .key label:not(.transition-metal),
 #Otros-Metales:checked ~ .periodic-table .key label:not(.post-transition-metal),
-#Metaloides:checked ~ .periodic-table .key label:not(.metalloid),
+#Metaloides:checked ~ .periodic-table .key label:not(.Metaloide),
 #Otros-Metales:checked ~ .periodic-table .key label:not(.other-nonmetal),
-#Gases-nobles:checked ~ .periodic-table .key label:not(.Gas-Noble),
+#Gases-nobles:checked ~ .periodic-table .key label:not(.GasNoble),
 #Halógenos:checked ~ .periodic-table .key label:not(.Halógeno) {
   opacity: 0.65;
 }
