--- a/src/style.sass
+++ b/src/style.sass
@@ -294,7 +294,7 @@ body
 .metalloid
   color: $metalloidColor
 
-.other-nonmetal
+.Otro-no-Metal
   color: $otherNonmetalColor
 
 .GasNoble
@@ -411,7 +411,7 @@ body
 #Metales-de-Transición:checked ~ .periodic-table .elemento:not(.transition-metal),
 #Otros-Metales:checked ~ .periodic-table .elemento:not(.post-transition-metal),
 #Metaloides:checked ~ .periodic-table .elemento:not(.metalloid),
-#Otros-Metales:checked ~ .periodic-table .elemento:not(.other-nonmetal),
+#Otros-Metales:checked ~ .periodic-table .elemento:not(.Otro-no-Metal),
 #Gases-nobles:checked ~ .periodic-table .elemento:not(.GasNoble),
 #Halógenos:checked ~ .periodic-table .elemento:not(.Halógeno),
 #Alcalinos:checked ~ .periodic-table .placeholder,
@@ -435,7 +435,7 @@ body
 #Metales-de-Transición:checked ~ .periodic-table .key label:not(.transition-metal),
 #Otros-Metales:checked ~ .periodic-table .key label:not(.post-transition-metal),
 #Metaloides:checked ~ .periodic-table .key label:not(.metalloid),
-#Otros-Metales:checked ~ .periodic-table .key label:not(.other-nonmetal),
+#Otros-Metales:checked ~ .periodic-table .key label:not(.Otro-no-Metal),
 #Gases-nobles:checked ~ .periodic-table .key label:not(.GasNoble),
 #Halógenos:checked ~ .periodic-table .key label:not(.Halógeno) {
   opacity: 0.65;
