--- a/src/index.pug
+++ b/src/index.pug
@@ -1,4 +1,4 @@
-- var categories = ['alkali-metals','alkaline-earth-metals','lanthanoids','actinoids','transition-metals','post-transition-metals','metalloids','other-nonmetals','noble-gasses','unknown']
+- var categorias = ['alkali-metals','alkaline-earth-metals','lanthanoids','actinoids','transition-metals','post-transition-metals','metalloids','other-nonmetals','noble-gasses','unknown']
 
 // ELEMENT MIXIN TEMPLATE
 mixin element(number, symbol, name, mass, weight, material, column, row)
@@ -159,7 +159,7 @@ mixin placeholder(number, material, column, row)
     
     .key
       .row
-        label.alkali-metal(for='alkali-metals') Alkali Metals
+        label.alkali-metal(for='Alcalinos') Alcalinos
         label.alkaline-earth-metal(for='alkaline-earth-metals') Alkaline Earth Metals
         label.lanthanoid(for='lanthanoids') Lanthanoids
         label.actinoid(for='actinoids') Aktinoids
