--- a/style.css
+++ b/style.css
@@ -1888,8 +1888,8 @@ body {
   color: #759fff;
 }
 
-.Halógeno {
-  color: #c01111;
+.Halogeno {
+  color: #ce1515;
 }
 
 .r1 {
@@ -2106,7 +2106,7 @@ body {
 #Metaloides:checked ~ .periodic-table .elemento:not(.Metaloide),
 #Otros-Metales:checked ~ .periodic-table .elemento:not(.Otro-no-Metal),
 #Gases-nobles:checked ~ .periodic-table .elemento:not(.GasNoble),
-#Halógenos:checked ~ .periodic-table .elemento:not(.Halógeno),
+#Halogenos:checked ~ .periodic-table .elemento:not(.Halogeno),
 #Alcalinos:checked ~ .periodic-table .placeholder,
 #Alcalino-Térreos:checked ~ .periodic-table .placeholder,
 #Lantánidos:checked ~ .periodic-table .placeholder:not(.lanthanoid),
@@ -2116,7 +2116,7 @@ body {
 #Metaloides:checked ~ .periodic-table .placeholder,
 #Otros-Metales:checked ~ .periodic-table .placeholder,
 #Gases-nobles:checked ~ .periodic-table .placeholder,   
-#Halógenos:checked ~ .periodic-table .placeholder {
+#Halogenos:checked ~ .periodic-table .placeholder {
   opacity: 0.15;
   pointer-events: none;
 }
@@ -2130,7 +2130,7 @@ body {
 #Metaloides:checked ~ .periodic-table .key label:not(.Metaloide),
 #Otros-Metales:checked ~ .periodic-table .key label:not(.Otro-no-Metal),
 #Gases-nobles:checked ~ .periodic-table .key label:not(.GasNoble),
-#Halógenos:checked ~ .periodic-table .key label:not(.Halógeno) {
+#Halogenos:checked ~ .periodic-table .key label:not(.Halogeno) {
   opacity: 0.65;
 }
 
