--- a/src/style.sass
+++ b/src/style.sass
@@ -4,7 +4,7 @@ $gridGap: 5px
 $alkaliMetalColor: #ecbe59
 $alkalineEarthMetalColor: #dee955
 $lanthanoidColor: #ec77a3
-$actinoidColor: #c686cc
+$ActinidoColor: #c686cc
 $transitionMetalColor: #fd8572
 $postTransitionMetalColor: #4cddf3
 $metalloidColor: #3aefb6
@@ -282,8 +282,8 @@ body
 .lanthanoid
   color: $lanthanoidColor
 
-.actinoid
-  color: $actinoidColor
+.Actínido
+  color: $ActinidoColor
   
 .transition-metal
   color: $transitionMetalColor
@@ -407,7 +407,7 @@ body
 #Alcalinos:checked ~ .periodic-table .elemento:not(.alkali-metal),
 #Alcalino-Térreos:checked ~ .periodic-table .elemento:not(.alkaline-earth-metal),
 #Lantánidos:checked ~ .periodic-table .elemento:not(.lanthanoid),
-#Actínidos:checked ~ .periodic-table .elemento:not(.actinoid),
+#Actínidos:checked ~ .periodic-table .elemento:not(.Actínido),
 #Metales-de-Transición:checked ~ .periodic-table .elemento:not(.transition-metal),
 #Otros-Metales:checked ~ .periodic-table .elemento:not(.post-transition-metal),
 #Metaloides:checked ~ .periodic-table .elemento:not(.metalloid),
@@ -417,7 +417,7 @@ body
 #Alcalinos:checked ~ .periodic-table .placeholder,
 #Alcalino-Térreos:checked ~ .periodic-table .placeholder,
 #Lantánidos:checked ~ .periodic-table .placeholder:not(.lanthanoid),
-#Actínidos:checked ~ .periodic-table .placeholder:not(.actinoid),
+#Actínidos:checked ~ .periodic-table .placeholder:not(.Actínido),
 #Metales-de-Transición:checked ~ .periodic-table .placeholder,
 #Otros-Metales:checked ~ .periodic-table .placeholder,
 #Metaloides:checked ~ .periodic-table .placeholder,
@@ -431,7 +431,7 @@ body
 #Alcalinos:checked ~ .periodic-table .key label:not(.alkali-metal),
 #Alcalino-Térreos:checked ~ .periodic-table .key label:not(.alkaline-earth-metal),
 #Lantánidos:checked ~ .periodic-table .key label:not(.lanthanoid),
-#Actínidos:checked ~ .periodic-table .key label:not(.actinoid),
+#Actínidos:checked ~ .periodic-table .key label:not(.Actínido),
 #Metales-de-Transición:checked ~ .periodic-table .key label:not(.transition-metal),
 #Otros-Metales:checked ~ .periodic-table .key label:not(.post-transition-metal),
 #Metaloides:checked ~ .periodic-table .key label:not(.metalloid),
