--- a/style.css
+++ b/style.css
@@ -1864,7 +1864,7 @@ body {
   color: #ec77a3;
 }
 
-.actinoid {
+.Actínido {
   color: #c686cc;
 }
 
@@ -2100,7 +2100,7 @@ body {
 #Alcalinos:checked ~ .periodic-table .elemento:not(.alkali-metal),
 #Alcalino-Térreos:checked ~ .periodic-table .elemento:not(.alkaline-earth-metal),
 #Lantánidos:checked ~ .periodic-table .elemento:not(.lanthanoid),
-#Actínidos:checked ~ .periodic-table .elemento:not(.actinoid),
+#Actínidos:checked ~ .periodic-table .elemento:not(.Actínido),
 #Metales-de-Transición:checked ~ .periodic-table .elemento:not(.transition-metal),
 #Otros-Metales:checked ~ .periodic-table .elemento:not(.post-transition-metal),
 #Metaloides:checked ~ .periodic-table .elemento:not(.Metaloide),
@@ -2110,7 +2110,7 @@ body {
 #Alcalinos:checked ~ .periodic-table .placeholder,
 #Alcalino-Térreos:checked ~ .periodic-table .placeholder,
 #Lantánidos:checked ~ .periodic-table .placeholder:not(.lanthanoid),
-#Actínidos:checked ~ .periodic-table .placeholder:not(.actinoid),
+#Actínidos:checked ~ .periodic-table .placeholder:not(.Actínido),
 #Metales-de-Transición:checked ~ .periodic-table .placeholder,
 #Otros-Metales:checked ~ .periodic-table .placeholder,
 #Metaloides:checked ~ .periodic-table .placeholder,
@@ -2124,7 +2124,7 @@ body {
 #Alcalinos:checked ~ .periodic-table .key label:not(.alkali-metal),
 #Alcalino-Térreos:checked ~ .periodic-table .key label:not(.alkaline-earth-metal),
 #Lantánidos:checked ~ .periodic-table .key label:not(.lanthanoid),
-#Actínidos:checked ~ .periodic-table .key label:not(.actinoid),
+#Actínidos:checked ~ .periodic-table .key label:not(.Actínido),
 #Metales-de-Transición:checked ~ .periodic-table .key label:not(.transition-metal),
 #Otros-Metales:checked ~ .periodic-table .key label:not(.post-transition-metal),
 #Metaloides:checked ~ .periodic-table .key label:not(.Metaloide),
