--- a/src/style.sass
+++ b/src/style.sass
@@ -282,7 +282,7 @@ body
 .lanthanoid
   color: $lanthanoidColor
 
-.Actínido
+.Actinido
   color: $ActinidoColor
   
 .transition-metal
@@ -407,7 +407,7 @@ body
 #Alcalinos:checked ~ .periodic-table .elemento:not(.alkali-metal),
 #Alcalino-Térreos:checked ~ .periodic-table .elemento:not(.alkaline-earth-metal),
 #Lantánidos:checked ~ .periodic-table .elemento:not(.lanthanoid),
-#Actínidos:checked ~ .periodic-table .elemento:not(.Actínido),
+#Actinidos:checked ~ .periodic-table .elemento:not(.Actinido),
 #Metales-de-Transición:checked ~ .periodic-table .elemento:not(.transition-metal),
 #Otros-Metales:checked ~ .periodic-table .elemento:not(.post-transition-metal),
 #Metaloides:checked ~ .periodic-table .elemento:not(.metalloid),
@@ -417,7 +417,7 @@ body
 #Alcalinos:checked ~ .periodic-table .placeholder,
 #Alcalino-Térreos:checked ~ .periodic-table .placeholder,
 #Lantánidos:checked ~ .periodic-table .placeholder:not(.lanthanoid),
-#Actínidos:checked ~ .periodic-table .placeholder:not(.Actínido),
+#Actinidos:checked ~ .periodic-table .placeholder:not(.Actinido),
 #Metales-de-Transición:checked ~ .periodic-table .placeholder,
 #Otros-Metales:checked ~ .periodic-table .placeholder,
 #Metaloides:checked ~ .periodic-table .placeholder,
@@ -431,7 +431,7 @@ body
 #Alcalinos:checked ~ .periodic-table .key label:not(.alkali-metal),
 #Alcalino-Térreos:checked ~ .periodic-table .key label:not(.alkaline-earth-metal),
 #Lantánidos:checked ~ .periodic-table .key label:not(.lanthanoid),
-#Actínidos:checked ~ .periodic-table .key label:not(.Actínido),
+#Actinidos:checked ~ .periodic-table .key label:not(.Actinido),
 #Metales-de-Transición:checked ~ .periodic-table .key label:not(.transition-metal),
 #Otros-Metales:checked ~ .periodic-table .key label:not(.post-transition-metal),
 #Metaloides:checked ~ .periodic-table .key label:not(.metalloid),
@@ -441,7 +441,7 @@ body
   opacity: 0.65;
 }
 
-.cambiar-categoria:not(#Lantánidos):not(#Actínidos):checked ~ .periodic-table .gap {
+.cambiar-categoria:not(#Lantánidos):not(#Actinidos):checked ~ .periodic-table .gap {
   opacity: 0.5;
 }
 
