--- a/src/style.sass
+++ b/src/style.sass
@@ -411,7 +411,7 @@ body
 #Metales-de-Transición:checked ~ .periodic-table .elemento:not(.transition-metal),
 #Otros-Metales:checked ~ .periodic-table .elemento:not(.post-transition-metal),
 #Metaloides:checked ~ .periodic-table .elemento:not(.metalloid),
-#Otros-Metales:checked ~ .periodic-table .elemento:not(.Otro-no-Metal),
+#Otros-no-Metales:checked ~ .periodic-table .elemento:not(.Otro-no-Metal),
 #Gases-nobles:checked ~ .periodic-table .elemento:not(.GasNoble),
 #Halogenos:checked ~ .periodic-table .elemento:not(.Halogeno),
 #Alcalinos:checked ~ .periodic-table .placeholder,
@@ -421,7 +421,7 @@ body
 #Metales-de-Transición:checked ~ .periodic-table .placeholder,
 #Otros-Metales:checked ~ .periodic-table .placeholder,
 #Metaloides:checked ~ .periodic-table .placeholder,
-#Otros-Metales:checked ~ .periodic-table .placeholder,
+#Otros-no-Metales:checked ~ .periodic-table .placeholder,
 #Gases-nobles:checked ~ .periodic-table .placeholder,
 #Halogenos:checked ~ .periodic-table .placeholder {
   opacity: 0.15;
@@ -435,7 +435,7 @@ body
 #Metales-de-Transición:checked ~ .periodic-table .key label:not(.transition-metal),
 #Otros-Metales:checked ~ .periodic-table .key label:not(.post-transition-metal),
 #Metaloides:checked ~ .periodic-table .key label:not(.metalloid),
-#Otros-Metales:checked ~ .periodic-table .key label:not(.Otro-no-Metal),
+#Otros-no-Metales:checked ~ .periodic-table .key label:not(.Otro-no-Metal),
 #Gases-nobles:checked ~ .periodic-table .key label:not(.GasNoble),
 #Halogenos:checked ~ .periodic-table .key label:not(.Halogeno) {
   opacity: 0.65;
